# google_trend_data_experiment

./: README.md  pyproject.toml
notebooks/: google_trend_forecasting.ipynb
